--- a/finding_donors.ipynb
+++ b/finding_donors.ipynb
@@ -897,7 +897,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer: **"
+    "**Answer: ** AdaBoostClassifier as it has the best F-Score, and accuracy on testing set "
    ]
   },
   {
@@ -1208,7 +1208,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer:**"
+    "**Answer:** The accuracy and F-score were less than training the model on the complete set of features but not by much.\n",
+    "and yes if the time was a factor it will not hurt much using a subset of the most effective features"
    ]
   },
   {
